--- a/TomocaMoviesWebsite/TomocaMoviesWebsite/Content/choose-seats.css
+++ b/TomocaMoviesWebsite/TomocaMoviesWebsite/Content/choose-seats.css
@@ -3,7 +3,7 @@ body {
     font-family: roboto, sans-serif;
 }
 
-.zone {
+.zone3 {
     background-color: white;
     text-align: center;
     margin-left: 15%;
