update admin news

--- a/TomocaMoviesWebsite/TomocaMoviesWebsite/Views/Admin/ThemTinTuc.cshtml
+++ b/TomocaMoviesWebsite/TomocaMoviesWebsite/Views/Admin/ThemTinTuc.cshtml
@@ -1,29 +1,31 @@
-﻿@model TomocaMoviesWebsite.Models.Content
+﻿@model TomocaMoviesWebsite.Models.New
 
+@using TomocaMoviesWebsite.Models
 @{
     ViewBag.Title = "ThemTinTuc";
     Layout = "~/Views/Shared/Admin_Layout.cshtml";
 }
-
-<div>
+@{ var ngayhientai = DateTime.Now;
+    TomocaMoviesDataContext db = new TomocaMoviesDataContext();
+    var username = db.Users.First(x => x.Username == @Session["Username"].ToString());
+}
 <fieldset>
     <legend>Upload multi file</legend>
     @using (Html.BeginForm("ThemTinTuc", "Admin", FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
+        <input type="file" name="files" required /><br />
         <label>Chọn file: </label><br />
-        @Html.TextBox("tieude", null, new { @class = "form-control" })
+        @Html.TextBoxFor(model => model.Title, null, new { @class = "form-control" })
+        @Html.TextBoxFor(model => model.CreateTime, new { @class = "form-control", @Value=ngayhientai.ToString(), @readonly="readonly" })
+        @Html.TextBoxFor(model => model.UserID, new { @class = "form-control", @Value=username.UserID.ToString(), @readonly = "readonly" })
+        @Html.TextBoxFor(model => model.ReadCount, new { @class = "form-control", @Value=0, @readonly = "readonly" })
         <label>Chọn file: </label><br />
-        <input type="file" name="uploadFile[0]" required /><br />
+        @Html.TextBoxFor(model => model.Content1, null, new { @class = "form-control" })
+        <input type="file" name="files" required /><br />
         <label>Chọn file: </label><br />
-        <a class="btnAddNew" href="#">Thêm</a>
-        <br />
-        <div id="myinput" class="myinput">
-            <input type="text" name="nd[1]" required /><br />
-            <input type="file" name="uploadFile[1]" required /><br />
-        </div>
-        <br />
+        @Html.TextBoxFor(model => model.Content2, null, new { @class = "form-control" })
+        <input type="file" name="files" required /><br />
         <input type="submit" value="Upload" />
-
     }
 </fieldset>
 <div>
