--- a/TomocaMoviesWebsite/TomocaMoviesWebsite/Views/Shared/Tomoca_Layout.cshtml
+++ b/TomocaMoviesWebsite/TomocaMoviesWebsite/Views/Shared/Tomoca_Layout.cshtml
@@ -11,6 +11,7 @@
     <!-- CSS cua tung thang them o view dung them o day -->
     @RenderSection("css", false)
     @RenderSection("scriptstren", required: false)
+    <link href="~/Content/tiecketsieucapvippro.css" rel="stylesheet" />
     <title>Tomoca | Top Movies Chanel</title>
 </head>
 <body>
