--- a/TomocaMoviesWebsite/TomocaMoviesWebsite/Views/Tomoca/Tickets.cshtml
+++ b/TomocaMoviesWebsite/TomocaMoviesWebsite/Views/Tomoca/Tickets.cshtml
@@ -1,10 +1,13 @@
-﻿@model IEnumerable<TomocaMoviesWebsite.Models.Movy>
+﻿@model IEnumerable<TomocaMoviesWebsite.Models.MiAnLien>
+@using TomocaMoviesWebsite.Models
 @{
     ViewBag.Title = "Tickets";
     Layout = "~/Views/Shared/Tomoca_Layout.cshtml";
+    TomocaMoviesDataContext db = new TomocaMoviesDataContext();
+    int Day = DateTime.Now.Day;
+    var listMoviesDay = db.MiAnLiens.Where(x => x.MovieID > Day);
 }
 @section css{
-    <link href="~/Content/ticket.css" rel="stylesheet" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
     <link href="~/Content/choose-seats.css" rel="stylesheet" />
 }
@@ -26,39 +29,44 @@
     .textboxx {
         display: none;
     }
+    .ticket:hover{
+        text-decoration: none;
+    }
 </style>
 @{
     DateTime d = DateTime.Now;
     var month = DateTime.Now.ToString("MMMM");
     var day = d.Day;
     var dm = 0;
+    var dm1 = 0;
 }
 <div class="ticket-top">
-    @for (int i = 1; i < 12; i++)
+    @for (int i = 1; i < 8; i++)
     {
         var dayy = DateTime.Today.AddDays(dm);
-        string dayte = dayy.ToString("MMddyyyy");
-        @Html.TextBox("Checkday", dayte, new { @class = "textboxx" });
-        string strDay = dayy.ToString("dd");
+        string dayte = dayy.ToString("dd-MM-yyyy");
+        string strday = dayy.ToString("dd");
+        int daysd = int.Parse(dayy.ToString("ddMM"));
         string strMonth = dayy.ToString("MMMM");
         string dayd = dayy.DayOfWeek.ToString();
-        <div class="ticket">
+        <a class="ticket" href="~/Tomoca/Tickets?daysd=@dm1">
             <div class="item-day">
-                <span class="day-big">@strDay</span><br>
+                <span class="day-big">@strday</span><br>
                 <span class="day-small">@strMonth</span>
             </div>
             <div class="item-day-l">
                 @dayd
             </div>
-        </div>
+        </a>
         dm++;
+        dm1++;
     }
 </div>
 <div class="nowplaying">
     <ul>
         <li class="crossn"></li>
         <li class="nowplaying-count">
-            <p class="ccc">NOWPLAYING (@ViewData["Test"])<span style="color:#5C5C5C; margin-left: 20px;">UPCOMING</span></p>
+            <p class="ccc">NOWPLAYING ()<span style="color:#5C5C5C; margin-left: 20px;">UPCOMING</span></p>
         </li>
         <li class="crossn" style="width: 52%;"></li>
     </ul>
@@ -71,15 +79,29 @@
                 {
                     <div class="item">
                         <div class="pad15">
-                            <img style="width: 100%; height: 100%;" src="@item.Image" />
+                            <img class="clickdeto" style="width: 100%; height: 100%;" src="@item.Movy.Image" />
                         </div>
                         <div class="pad151 font-pad">
-                            @item.Title
                         </div>
                         <div class="pad152 font-pad">
-                            <span style="color: #434343; font-size: 16px; font-weight: bold;">A QUIET PLACE PART II</span><br>
-                            <span>Horror, Sci-Fi</span><br>
-                            <span><img src="~/Content/image/clock.png" />1hrs 23m</span>
+                            <span style="color: #434343; font-size: 16px; font-weight: bold;">@item.Movy.Title</span><br>
+                            @{var idloai = db.MoviesGenres.Where(x => x.MovieID == item.MovieID);
+                                List<string> lstg = new List<string>();
+                                Genre g = new Genre();
+                                foreach (var i in idloai)
+                                {
+                                    Genre temp = db.Genres.SingleOrDefault(x => x.GenreID == i.GenreID);
+                                    string tam = temp.GenreName;
+                                    lstg.Add(tam);
+                                }
+                            }
+                        <span>
+                            @for (int i = 0; i < lstg.Count(); i++)
+                            {
+                                <span>@lstg[i].ToString(), </span>
+                            }
+                        </span><br>
+                            <span><img src="~/Content/image/clock.png" />@item.Movy.TimeOfFilm</span>
                         </div>
                     </div>
                 }
@@ -92,8 +114,8 @@
 
 
 <div class="content-bookticket">
-    <div class="bookticket-first">
-        <p>1. Choose your theater</p>
+    <div class="bookticket-first" style="padding-top: 1px;;">
+        <p style="margin: 20px;">1. Choose your theater</p>
         <div style="display:flex">
             <div class="dropdown1">
                 <div onclick="myDropdown()" class="dropbtn bg-dropbtn">
@@ -134,16 +156,16 @@
         <div class="num-grid">
             <div class="movie-inf">
                 <table class="inf-table">
-                    <tr>
-                        <td class="img-zone3">
+                    <tr >
+                        <td class="img-zone3" style="width: 134px; text-align: center;">
                             <img class="movie-img" src="~/Content/image/Rectangle 25.png" alt="">
                         </td>
-                        <td class="inf-zone3">
+                        <td class="inf-zone3" style="width: 285px; line-height: 3px; ">
                             <p class="movie-name">A QUIET PLACE PART II</p>
-                            <p class="movie-type">Horror, Sci-Fi, Drama</p>
-                            <p class="movie-length">1hrs 23m</p>
-                            <p class="movie-day">Tuesday, Jun 30 at 1:30 AM</p>
-                            <p class="movie-place">CGV Aeon Bình Tân theater, Auditorium 5</p>
+                            <p style="margin-top: 20px; "  class="movie-type">Horror, Sci-Fi, Drama</pstyle="margin:>
+                            <p style="margin-top: 20px; " class="movie-length">1hrs 23m</p>
+                            <p style="margin-top: 20px; " class="movie-day">Tuesday, Jun 30 at 1:30 AM</p>
+                            <p style="margin-top: 20px; " class="movie-place">CGV Aeon Bình Tân theater, Auditorium 5</p>
                         </td>
                     </tr>
                 </table>
@@ -165,8 +187,8 @@
                     <div class="value-button congthuong" id="increase" onclick="increaseValue2(); thuongcong()" value="Increase Value">+</div>
                 </form>
                 <hr class="hr-xam">
-                <span>Total</span>
-                <input style="margin-left: 60%;" type="number" class="tongtien" id="tongtien" value="0"></input>
+                <span style="font-size: 18px; font-weight: 700;">Total</span>
+                <input style="margin-left: 57%; margin-bottom: 15px;" type="number" class="tongtien" id="tongtien" value="0"></input>
             </div>
         </div>
     </div>
@@ -345,7 +367,7 @@
                         <label class="textt" for="your-seat">Your seat</label>
                     </li>
                     <li class="li-inf">
-                        <input style="cursor: auto;" type="checkbox" class="seats" id="available-seat">
+                        <input style="cursor: auto;" type="checkbox" class="seatsdsd" id="available-seat">
                         <label class="textt" for="available-seat">Available</label>
                     </li>
                 </ul>
