--- a/TomocaMoviesWebsite/TomocaMoviesWebsite/Content/tiecketsieucapvippro.css
+++ b/TomocaMoviesWebsite/TomocaMoviesWebsite/Content/tiecketsieucapvippro.css
@@ -98,6 +98,7 @@
     font-weight: bold;
     font-size: 30px;
     color: #FF7300;
+    margin: 20px 0 0 230px;
 }
 .crossn {
     margin: 25px 0;
@@ -173,6 +174,7 @@
     height: 312px;
     width: 209px !important;
     margin: 8px 0 0 0px !important;
+    
 }
 
 .anchoape2 {
@@ -183,10 +185,10 @@
     display: block !important;
     height: 312px;
     width: 209px !important;
-    margin: 0px 0 0 -10px !important;
+    margin: 0px 0 10px -10px !important;
 }
 .pad15 {
-    margin-top: 30px !important;
+    margin-top: 30px;
 }
 
 .font-pad {
@@ -211,7 +213,6 @@
     background-color: transparent !important;
     width: 164px;
     height: 35px;
-    margin-top: -20px !important;
     text-align: center;
 }
 
