--- a/TomocaMoviesWebsite/TomocaMoviesWebsite/Views/adminmanager/phimdangchieu.cshtml
+++ b/TomocaMoviesWebsite/TomocaMoviesWebsite/Views/adminmanager/phimdangchieu.cshtml
@@ -13,7 +13,7 @@
     </div>
     <div class="col-2">
         <div style="float: right">
-            <button type="button" class="btn btn-success">@Html.ActionLink("Thêm", "ThemPhimBo")</button>
+            <button type="button" class="btn btn-success">@Html.ActionLink("Thêm", "ThemPhimDC")</button>
         </div>
     </div>
 </div>
@@ -49,6 +49,9 @@
 
                     </p>
                     <div class="d-flex justify-content-between align-items-center">
+                        <div>
+                            @Html.ActionLink("Thêm Chi Tiết", "ThemChiTiet", new { id = item.MovieID })
+                        </div>
                         <div>
                             <a onclick="return ConfirmXoa()" href="@Url.Action("XoaPhimDC", new { id = item.MovieID })">Xóa</a>
                         </div>
